# webcounter

./: README.md
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko3/webcounter/.github/workflows/: main.yaml
viikko3/webcounter/src/tests/: reset.robot  resource.robot
